operations/kubernetes/base/frontend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bc-frontend
  namespace: bookcars
  labels:
    app: bc-frontend
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      name: http
    - port: 443
      targetPort: https
      name: https
  selector:
    app: bc-frontend
